--- a/assets/scss/imageset.scss
+++ b/assets/scss/imageset.scss
@@ -25,19 +25,26 @@ $imageset-unveil-delay: .05s !default;
      left side of an imageset. */
   overflow: hidden;
     
-  /* Improve rendering speed in supported browsers. */
+  /* Improve rendering speed in supported browsers. As of
+     September 2017, this is currently only supported by
+     Google Chrome. */
   contain: content;
+
+  /* As the visibility inherits, it’s set explicitly to
+     “visible” to avoid it from being changed from a any
+     parent element. */
+  visibility: visible;
 }
 
 /* ·····  ImageSet with Ratio-Placeholder  ·································· */
 
 .imageset.-ratio {
-  display: block;
-
-  /* Remove bottom margin (borrowed from Inuit CSS) */
-  // vertical-align: middle;
+  display: inline-block;
   width: 100%;
   position: relative;
+
+  /* Remove bottom margin (borrowed from Inuit CSS) */
+  vertical-align: bottom;
   
   /* Create a new stacking context for this imageset.
      See comments below to learn about why this
@@ -61,68 +68,76 @@ $imageset-unveil-delay: .05s !default;
   zoom: 1;
 }
 
-.imageset.-multiple-ratios .imageset-element {
-  // Prevent flash of a skewed image after ratio has
-  // changed, but new image was not loaded yet.
-  // Not supported in IE & EDGE <= 14
-  // DEACTIVATED DUE TO PERFORMANCE ISSUES!
-  // object-fit: cover;
-}
+// DEACTIVATED DUE TO PERFORMANCE ISSUES!
+//
+// .imageset.-multiple-ratios .imageset-element {
+//   /* Prevent flash of a skewed image after ratio has
+//      changed, but new image was not loaded yet.
+//      Not supported in IE & EDGE <= 14
+//   object-fit: cover;
+// }
 
 .imageset.-ratio .imageset-ratio-fill {
   display: block;
   overflow: hidden;
   position: relative;
   z-index: -1;
+
   /* Setting the width of the placeholder element and
      adding `overflow: hidden` prevents rendering bugs
      in IE 11. */
   width: 100%;
 }
 
-// .imageset.-ratio .imageset-element {
-//   z-index: 2;
-// }
-
 .js .imageset.-ratio.-lazyload .imageset-element {
-  /* The actual image is kept behind the placeholder.
-     Rather than fading in the image, the placeholder is
-     faded out instead. This prevents the image layer to
-     switch from hardware-accelerated rendering during the
-     animation to CPU rendering after the animation has
-     ended, because this can cause rendering issues in
-     WebKit- and Blink-based (and possibly any other)
-     browsers. */
-  z-index: 1;
-  //opacity: 0;
-  backface-visibility: hidden;
-  // will-change: opacity;
-  @media screen {
-    transition: opacity $imageset-unveil-duration;
-  }
-}
-
-.js .imageset.-alpha.-lazyload .imageset-element {
-  /* Images with transparency require a different fading
-     technique, as the placeholder would shine through,
-     after the final image was loaded. */
+  /* Keep element hidden until the actual image has been
+     loaded. */
+  visibility: hidden;
   opacity: 0;
-  will-change: opacity;
+  backface-visibility: hidden;
 
+  /* Prepare the browser that imageset will change some
+     properties on the image element */
+  will-change: opacity, visibility;
+  
   @media screen {
-    transition: opacity $imageset-unveil-duration;
+    transition:
+      visibility 0s 0s linear,
+      opacity $imageset-unveil-duration 0s;
   }
 }
 
 .js .imageset.-lazyload.is-loaded .imageset-element {
   opacity: 1;
+  visibility: visible;
+
+  /* We’re not gonna change anything further after the
+    final image has been loaded. */
   will-change: auto;
 }
+
+// .js .imageset.-alpha.-lazyload .imageset-element {
+//   Images with transparency require a different fading
+//      technique, as the placeholder would shine through,
+//      after the final image was loaded.
+//   opacity: 0;
+//   will-change: opacity;
+
+//   @media screen {
+//     transition: opacity $imageset-unveil-duration;
+//   }
+// }
+
+// .js .imageset.-alpha.-lazyload.is-loaded .imageset-element {
+//   opacity: 1;
+//   will-change: auto;
+// }
+
+/* ·····  Placeholders  ····················································· */
 
 .imageset-placeholder {
   display: block;
   position: absolute;
-  z-index: 1;
   top: 50%;
   left: 50%;
   width: 100%;
@@ -134,32 +149,10 @@ $imageset-unveil-delay: .05s !default;
   transform: translate(-50%, -50%);
   overflow: hidden;
   backface-visibility: hidden;
+  visibility: visible;
 }
 
 .js .imageset.-lazyload .imageset-placeholder {
-  /* Placeholder will be placed on top of the actual
-     image element. This will only be applied, when
-     JavaScript is enabled. */
-  
-  // A nice addition here would be:
-  // `will-change: opacity;`, but it causes
-  // subpixel-rendering issues in Safari 10 :-(
-  //will-change: opacity;
-  
-  /* Visibility of placeholder is changed to hidden after
-     the transition. */
-  @media screen {
-    transition:
-      opacity $imageset-unveil-duration $imageset-unveil-delay,
-      visibility 0s ($imageset-unveil-duration + $imageset-unveil-delay + .25s);
-  }
-  
-  /* The actual placeholder is in front of the actual
-     image, so we don’t have to fade in the image, which
-     would lead to artifacts in WebKit- and Blink-based
-     browsers. */
-  z-index: 2;
-
   /* Prevent user interaction like accidently saving the
      placeholder via tap/right-click */
   pointer-events: none;
@@ -171,12 +164,7 @@ $imageset-unveil-delay: .05s !default;
   background-color: #efefef;
 }
 
-.imageset.-alpha .imageset-placeholder {
-  //visibility: hidden;
-}
-
 .js .imageset.-alpha .imageset-placeholder {
-    visibility: visible;
 
     @media screen {
       transition:
@@ -205,8 +193,8 @@ $imageset-unveil-delay: .05s !default;
      and then change visibility to allow mouse interation
      with the loaded image in browsers, where the
      `pointer-events` property is not supported. */
-  opacity: 0;
-  visibility: hidden;
+  // opacity: 0;
+  // visibility: hidden;
 }
 
 /* ·····  NoScript Fallback  ················································ */
